# NEUROSWARMAI

./: .gitignore  ALPHA_CHARTER.md  ALPHA_CHARTER_V2.md  CHIMERIA_CLIENT_CHARTER.md  CHIMERIA_DEFENSE_HEALTHCARE_CHARTER.md  COGNITIVE_ARCHITECTURE_MAP.md  COGNITIVE_LANGUAGE_STACK.md  GOVERNANCE_CHARTER.md  INFRASTRUCTURE_NAMING_CHARTER.md  INTELLECTUAL_PROPERTY_NOTICE.md  MEDINA_BEDROCK_IMPLEMENTATION_SUMMARY.md  NOVA_BUILD_47_SUMMARY.md  PARALLAX_BUILD_SUMMARY.md  README.md  SECURITY.md  SIX_PLATFORMS_COMPLETE_SPEC.md  SOVEREIGN_SDK_CHARTER.md  SYSTEM_STATUS.md  build_python.py  caffeine.lock.json  deploy.sh  icp.yaml  index.js  main.did  main.wasm  nova.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  spec.md  vitest.config.js
atlas/: COGNITIVE_LANGUAGE_STACK.md  README.md  UPGRADE_MANAGEMENT.md
bridges/: command_platform_bridge.yaml  meridian_bridge.yaml
command/: COMMAND.md  index.js
desktop/: forge.config.cjs  main.js  package.json  preload.js
docs/: VERIFICATION_TRUST_FRAMEWORK.md  account.html  architecture-map.md  dashboard.html  documentation.html  index.html  neural-architecture.md  protocol-encyclopedia.md  research.html  security-audit.md  status.html  verification-report.md
enterprise/: PRODUCTS.md  brand-guardian.js  index.js  market-oracle.js  sentient-contracts.js  supply-mind.js  talent-compass.js
evidence/: README.md  ZENODO_ALIGNMENT.md
governance/: README.md  governance-cycle.js  governance-protocols-macro.js
languages/: ARCHITECTURE.md  BOOK.md  README.md  acl.spec  bcl.spec  cdl.spec  chl.spec  cil.spec  col.spec  (+34 more)
(+980 files in other folders)
