[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimeria-nova"
version = "0.2.0"
description = "Nova Intelligence SDK — Multimodal AI system with 20 tools across 5 categories"
readme = "pythonista/README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FreddyCreates" },
]
keywords = ["ai", "multimodal", "intelligence", "nova", "chimeria"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
chimeria-bridge = "python_substrate.substrate_bridge:main"
nova = "pythonista.nova_app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pythonista*", "python_substrate*"]

[tool.setuptools.package-dir]
python_substrate = "src/python_substrate"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = [".", "pythonista", "src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
